Prevents line break inside references.

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -14,6 +14,11 @@ body > .content {
   max-width: 700px;
 }
 
+/* Prevents line break inside references */
+.content sup {
+  white-space: nowrap;
+}
+
 body footer * {
   /* Reset line-height for navbar and footer */
   line-height: 1.42857143;
